No viewport anti-aliasing in the shaded mode in the latest 2.8 builds from blender-2.80.0-git.b331515d2e47-windows64 (May 03) onward #64132

Closed
opened 2019-05-04 10:14:16 +02:00 by Alphyn · 20 comments

System Information
Operating system: Windows 10 latest update
Graphics card: GTX 1070 Ti, GTX 1080 (another pc)

Blender Version
Broken: blender-2.80.0-git.ee0d8426ab6d-windows64 (May 04), blender-2.80.0-git.b331515d2e47-windows64 (May 02)
Worked: blender-2.80.0-git.a372e5e426e4-windows64 (May 01)

Short description of error
Viewport in the shaded mode looks considerably worse in the newest builds, lacks anti-aliasing.
May04Build.png
Older build:
May01Build.png

Exact steps for others to reproduce the error
The issue should be evident after opening the attached file.

What I tried

  • Deleted the Blender's settings folder
  • Set the Viewport settings to maximum quality
  • Tried on another PC
  • Shared the file on the Discord channel, another user confirmed:
    another_user.png

{F7004905}Aliasing.blend

**System Information** Operating system: Windows 10 latest update Graphics card: GTX 1070 Ti, GTX 1080 (another pc) **Blender Version** Broken: blender-2.80.0-git.ee0d8426ab6d-windows64 (May 04), blender-2.80.0-git.b331515d2e47-windows64 (May 02) Worked: blender-2.80.0-git.a372e5e426e4-windows64 (May 01) **Short description of error** Viewport in the shaded mode looks considerably worse in the newest builds, lacks anti-aliasing. ![May04Build.png](https://archive.blender.org/developer/F7004915/May04Build.png) Older build: ![May01Build.png](https://archive.blender.org/developer/F7004917/May01Build.png) **Exact steps for others to reproduce the error** The issue should be evident after opening the attached file. **What I tried** - Deleted the Blender's settings folder - Set the Viewport settings to maximum quality - Tried on another PC - Shared the file on the Discord channel, another user confirmed: ![another_user.png](https://archive.blender.org/developer/F7004928/another_user.png) {[F7004905](https://archive.blender.org/developer/F7004905/system-info.txt)}[Aliasing.blend](https://archive.blender.org/developer/F7004904/Aliasing.blend)
Author

Added subscriber: @Alphyn

Added subscriber: @Alphyn

Added subscriber: @ZedDB

Added subscriber: @ZedDB
Jeroen Bakker was assigned by Sebastian Parborg 2019-05-06 16:36:05 +02:00

Seems like it was b52a0c78af that broke this.

Seems like it was b52a0c78af that broke this.
Member

There has been a change in the design of the viewport quality and anti aliasing in general.

Every scene can set its anti aliasing method for the viewport and for rendering. This can be done when switching to the Workbench engine and then change the settings in the render sampling panel.

image.png

By default the viewport anti aliasing is set to Single pass anti-aliasing as the viewport should be as fast as possible. We cannot consistently determine the correct setting when loading older scenes (Viewport Quality is user setting, Viewport and Render samples are scene settings; this will lead to different result based on the user who loads the file), hence we set everything to the default values (Render: 8 samples, Viewport: Single Pass Anti-Aliasing) .

When you have a machine that is slower you want to have a setting to limit the viewport quality. This is the Viewport Quality setting in the user pref. This viewport quality setting only limits the Anti Aliasing samples if the setting in the scene is higher and only for drawing in the viewport. It will not change the anti aliasing method when saving the file.

During Viewport Render Image or Viewport Render Animation the Viewport Quality setting is not used.
When doing Render Image or Render Animation the Anti aliasing is used of the scene.

We have updated the manual to reflect these changes https://docs.blender.org/manual/en/dev/render/workbench/quality.html

There has been a change in the design of the viewport quality and anti aliasing in general. Every scene can set its anti aliasing method for the viewport and for rendering. This can be done when switching to the Workbench engine and then change the settings in the render sampling panel. ![image.png](https://archive.blender.org/developer/F7012088/image.png) By default the viewport anti aliasing is set to Single pass anti-aliasing as the viewport should be as fast as possible. We cannot consistently determine the correct setting when loading older scenes (Viewport Quality is user setting, Viewport and Render samples are scene settings; this will lead to different result based on the user who loads the file), hence we set everything to the default values (Render: 8 samples, Viewport: Single Pass Anti-Aliasing) . When you have a machine that is slower you want to have a setting to limit the viewport quality. This is the `Viewport Quality` setting in the user pref. This viewport quality setting only limits the Anti Aliasing samples if the setting in the scene is higher and only for drawing in the viewport. It will not change the anti aliasing method when saving the file. During `Viewport Render Image` or `Viewport Render Animation` the `Viewport Quality` setting is not used. When doing `Render Image` or `Render Animation` the Anti aliasing is used of the scene. We have updated the manual to reflect these changes https://docs.blender.org/manual/en/dev/render/workbench/quality.html
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Author

Thanks for explaining this. It all makes sense now. An update to the View Qalityality setting tooltip, as well as Multisampling settings would help, however. By the way, the maximum Multisampling setting in the User preferences is 16 samples, and you can set up to 32 samples in the Scene settings, but how does it work together if the settings in the User preferences override the Scene settings when the Scene multisampling settings are higher?

Thanks for explaining this. It all makes sense now. An update to the `View Qalityality` setting tooltip, as well as `Multisampling` settings would help, however. By the way, the maximum Multisampling setting in the User preferences is 16 samples, and you can set up to 32 samples in the Scene settings, but how does it work together if the settings in the `User preferences` override the `Scene settings` when the Scene multisampling settings are higher?

Added subscriber: @juang3d

Added subscriber: @juang3d

Shouldnt this option be in the solid mode pop-up rather or in addition to it being in the workbench render settings?

Having to change the render engine to configure something related to the viewport seems a bit awkward to me...

Cheers.

Shouldnt this option be in the solid mode pop-up rather or in addition to it being in the workbench render settings? Having to change the render engine to configure something related to the viewport seems a bit awkward to me... Cheers.
Author

Completely agree. That's the second place I checked when I realized the AA was gone (The first being the Viewport tab in the User preferences).

Completely agree. That's the second place I checked when I realized the AA was gone (The first being the Viewport tab in the User preferences).

Added subscriber: @WilliamReynish

Added subscriber: @WilliamReynish

@WilliamReynish any input on this?

@WilliamReynish any input on this?

Yes, I agree this seems weird. We don't do it this way for any other viewport setting that applies to Solid mode - you don't have to switch to the Workbench engine to adjust.

When just using Solid or Wireframe view, we should set the AA quality with the Multisampling setting in Preferences

Yes, I agree this seems weird. We don't do it this way for any other viewport setting that applies to Solid mode - you don't have to switch to the Workbench engine to adjust. When just using Solid or Wireframe view, we should set the AA quality with the Multisampling setting in Preferences

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'

I guess I'll reopen this then.

I guess I'll reopen this then.

Added subscriber: @brecht

Added subscriber: @brecht

I think it's clearly a bug that the workbench render settings affect the viewport, this should be controlled by the preferences. The Viewport Quality setting in the preferences has no effect now as far as I can tell.

Ideally it would changed to a similar enum as the new ones for the workbench, since a 0..1 slider here is rather odd.

I think it's clearly a bug that the workbench render settings affect the viewport, this should be controlled by the preferences. The Viewport Quality setting in the preferences has no effect now as far as I can tell. Ideally it would changed to a similar enum as the new ones for the workbench, since a 0..1 slider here is rather odd.
Author

Setting the Viewport quality to lover values reduces the amount of anti-aliasing for me. Different Multisampling settings, on the other hand, don't seem to affect anything.

Setting the Viewport quality to lover values reduces the amount of anti-aliasing for me. Different Multisampling settings, on the other hand, don't seem to affect anything.

Added subscriber: @antfarmar

Added subscriber: @antfarmar
Member

Will prepare the next changes:

  • Interactive viewport rendering will only use the user pref setting. The settings in the Sampling will only effect (Viewport Rendering/Animation and Render Image/Animation)
  • Viewport Quality will be replaced by a drop down list (Viewport Anti Aliasing)
Will prepare the next changes: * Interactive viewport rendering will only use the user pref setting. The settings in the Sampling will only effect (Viewport Rendering/Animation and Render Image/Animation) * Viewport Quality will be replaced by a drop down list (Viewport Anti Aliasing)
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64132
No description provided.